--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- Testing Netlify -->
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+        <input type='text' name="name" id='name' placeholder='Name'/>
+        <input type='email' name="email" id='email' placeholder='Enter Email'/>
+        <textarea id='message' name='message' placeholder='Your Message'></textarea>
+    </form>
     <div id="root"></div>
     <!--
       This HTML file is a template.
