--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <!-- Testing Netlify -->
+    <!-- Netlify Form -->
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
         <input type='text' name="name" id='name' placeholder='Name'/>
         <input type='email' name="email" id='email' placeholder='Enter Email'/>
