--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property='og:title' content="Aliel Reyes Portfolio"/>
+    <meta property='og:image' content="./AlielReyesWebsite2020.png"/>
+    <meta property='og:description' content="Software Development Portfolio"/>
+    <meta property='og:url' content="https://alielreyes.netlify.app/" />
     <meta
       name="description"
-      content="Software developer portfolio site created using Reactjs"
+      content="Software Development Portfolio"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
