Google Analytics Basic Tracking added.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta property='og:image' content="./AlielReyesWebsite2020.png"/>
     <meta property='og:description' content="Software Development Portfolio"/>
     <meta property='og:url' content="https://alielreyes.netlify.app/" />
+    <meta name="author" content="Aliel Reyes">
     <meta
       name="description"
       content="Software Development Portfolio"
