Changed project description a bit.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta property='og:title' content="Aliel Reyes Portfolio"/>
     <meta property='og:image' content="./AlielReyesWebsite2020.png"/>
-    <meta property='og:description' content="I am a software engineer whose passion lies in creating industry-standard web applications. This website showcases my previous projects and highlights my skills. "/>
+    <meta property='og:description' content="I am a software engineer who has a passion for creating industry-standard web applications. This website showcases my previous projects and highlights my skills. "/>
     <meta property='og:url' content="https://alielreyes.netlify.app/" />
     <meta name="author" content="Aliel Reyes">
     <meta
